@startuml
EncountersFactoryImpl  ..> Encounter : uses
EncountersFactoryImpl  ...> EncountersConstants : uses

class Encounter {
    + String getdescritpion()
    + String getDeny()
}

class EncountersFactoryImpl {
    + Optional<Encounter> getRandomEncounter()
}

class EncountersConstants {
    + {static}encounterChance
    + {static}gymBroChance
    ...
}
@enduml